Fixed text-align center

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,6 @@
 * {
-  /* border: 2px solid lightcoral; */
-  block-size: fit-content;
-  text-align: center;
+  /* block-size: fit-content;
+  text-align: center; */
 }
 body {
   background-color: #001d3d;
