--- a/client/src/css/RunData.css
+++ b/client/src/css/RunData.css
@@ -64,7 +64,7 @@
 }
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) { 
   .run-card {
-    width: 80%;
+    width: 85%;
     justify-items: center;
   }
   .run-card p {
